--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -15,6 +15,21 @@
 
   <tbody>
       <tr class="talk even">
+        <td class="date">2018-07-13</td>
+        <td class="speaker">Dan Hunt</td>
+        <td class="title">Flexible DSLs with Tagless Final</td>
+        <td class="details">
+          <ul>
+            <li class="meetup-link">
+              Meetup page: <a target="_blank" href="https://www.meetup.com/scala-phase/events/252599833/">meetup.com/.../252599833</a>
+            </li>
+            <li class="code">
+              Code: <a target="_blank" class="code-link" href="https://github.com/dfjhunt/tagless-talk">github.com/dfjhunt/tagless-talk</a>
+            </li>
+          </ul>
+        </td>
+      </tr>
+      <tr class="talk odd">
         <td class="date">2018-05-31</td>
         <td class="speaker">Marcus Henry</td>
         <td class="title">Type-driven Development</td>
@@ -32,7 +47,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2018-01-11</td>
         <td class="speaker">Gary Seiling</td>
         <td class="title">Exploring Word2vec in Scala</td>
@@ -47,7 +62,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2017-08-17</td>
         <td class="speaker">Yao Li</td>
         <td class="title">Dependent Types in Scala</td>
@@ -65,7 +80,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2017-06-15</td>
         <td class="speaker">Marcus Henry</td>
         <td class="title">Introductory TyDD in Scala</td>
@@ -83,7 +98,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2017-05-11</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">Contextual</td>
@@ -101,7 +116,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2016-12-08</td>
         <td class="speaker">Martin Snyder</td>
         <td class="title">Monadic Logging and You</td>
@@ -119,7 +134,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2016-09-07</td>
         <td class="speaker">Matthew Butt</td>
         <td class="title">Scalatron!</td>
@@ -134,7 +149,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2016-06-16</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">RDDs, DataFrames and Datasets in Apache Spark</td>
@@ -152,7 +167,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2016-05-18</td>
         <td class="speaker">Michael Pilquist</td>
         <td class="title">From Simulacrum to Typeclassic</td>
@@ -170,7 +185,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2015-09-10</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">An Introduction to Spark Streaming</td>
@@ -188,7 +203,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2015-04-22</td>
         <td class="speaker">Michael Pilquist</td>
         <td class="title">An Introduction to Shapeless via Scodec</td>
@@ -206,7 +221,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2015-03-19</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">Messing Around with Typesafe Slick</td>
@@ -224,7 +239,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2014-12-09</td>
         <td class="speaker">Michael Pigg and Ken Rimple</td>
         <td class="title">Reactive applications with Scala and AngularJS</td>
@@ -236,7 +251,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2014-10-21</td>
         <td class="speaker">Helena Edelson</td>
         <td class="title">Escape From Hadoop: Spark Streaming, Cassandra, Scala &amp; Akka</td>
@@ -251,7 +266,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2014-09-16</td>
         <td class="speaker">Martin Snyder</td>
         <td class="title">Live coding a CRUD database in Scala</td>
@@ -266,7 +281,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2014-07-24</td>
         <td class="speaker">Brad Miller</td>
         <td class="title">The Scala-Graph Library</td>
@@ -281,7 +296,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2014-06-12</td>
         <td class="speaker">Jason Feingold</td>
         <td class="title">Haskell and React.js</td>
@@ -296,7 +311,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2014-05-20</td>
         <td class="speaker">Dustin Getz &amp; Daniel Miladinov</td>
         <td class="title">React.js and functional JavaScript</td>
@@ -308,7 +323,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2014-04-24</td>
         <td class="speaker">Roland Kuhn</td>
         <td class="title">Roland Kuhn leads a Q&amp;A and live coding session</td>
@@ -320,7 +335,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2014-03-20</td>
         <td class="speaker">Gary Keorkunian</td>
         <td class="title">Viridity&#39;s Scala Units of Measure and Quantities API</td>
@@ -338,7 +353,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2013-09-25</td>
         <td class="speaker">Martin Snyder</td>
         <td class="title">Writing Functional Wrappers for Legacy APIs (joint meeting of PHASE and PhillyJUG)</td>
@@ -359,7 +374,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2013-07-09</td>
         <td class="speaker">Jason Feingold</td>
         <td class="title">Gradle and Scala</td>
@@ -374,7 +389,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2013-04-16</td>
         <td class="speaker">Dmitriy Setrakyan</td>
         <td class="title">Pearls of Distributed Programming with Scala and GridGain</td>
@@ -386,7 +401,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2012-12-04</td>
         <td class="speaker">Duncan Devore</td>
         <td class="title">CQRS and Event Sourcing</td>
@@ -401,7 +416,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2012-10-23</td>
         <td class="speaker">Nick McAvoy</td>
         <td class="title">Typesafe Slick</td>
@@ -416,7 +431,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2012-10-02</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">The Play! Framework</td>
@@ -431,7 +446,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2012-06-12</td>
         <td class="speaker">Yuvi Masory</td>
         <td class="title">Scalaz, Monads, Functors and You</td>
@@ -446,7 +461,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2012-05-15</td>
         <td class="speaker">Adam Hinz and George Adams</td>
         <td class="title">Dispatch, Unfiltered, Blue Eyes and Play: A Comparison</td>
@@ -458,7 +473,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2012-01-26</td>
         <td class="speaker">Mads Hartmann Jenson</td>
         <td class="title">Building SBT Plugins</td>
@@ -476,7 +491,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2011-11-15</td>
         <td class="speaker">Yuvi Masory</td>
         <td class="title">Scala on the Android Platform</td>
@@ -491,7 +506,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2011-10-18</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">SBT 0.10 and 0.11 Overview</td>
@@ -506,7 +521,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk odd">
+      <tr class="talk even">
         <td class="date">2011-09-20</td>
         <td class="speaker">Erik Osheim</td>
         <td class="title">Scala Type Classes</td>
@@ -521,7 +536,7 @@
           </ul>
         </td>
       </tr>
-      <tr class="talk even">
+      <tr class="talk odd">
         <td class="date">2011-08-10</td>
         <td class="speaker">Jamie Allen</td>
         <td class="title">Disrupters</td>
